<resources>
    <string name="app_name">Disaster Reporter</string>

    <string name="copyright_string">© I3D Labs 2021</string>


    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>
    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>
    <string name="label_passwordless">Passwordless Authentication</string>


    <string name="desc_passwordless">Use only an email to authenticate with Firebase.</string>
    <string name="label_phone_auth">Phone Number Authentication</string>

    <string name="desc_phone_auth">Use a phone number to authenticate with Firebase.</string>
    <string name="label_anonymous_auth">Anonymous Authentication</string>

    <string name="desc_anonymous_auth">Sign in anonymously and then later upgrade to a full Firebase Auth user.</string>
    <string name="label_anonymous_sign_in">Anonymous Sign In</string>

    <string name="label_account_linking">Account Linking</string>
    <string name="btn_link_account">Link Account</string>

    <string name="label_firebase_ui">FirebaseUI Auth</string>
    <string name="desc_firebase_ui">Use the FirebaseUI-Android library to authenticate with Firebase.</string>

    <string name="label_generic_idp">Generic OAuth</string>
    <string name="desc_generic_idp">Use a generic OAuth identity provider, like Apple, Microsoft, Yahoo, or Twitter to authenticate with Firebase.</string>
    <string name="label_multi_factor">Multi-Factor Authentication</string>


    <string name="desc_multi_factor">Use SMS for two-factor authentication. Note: this feature is only available for Cloud Identity Platform.</string>
    <string name="hint_user_id">User ID</string>

    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>

    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>

    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Enter Your Email</string>
    <string name="hint_password">Enter Password</string>
    <string name="hint_password2">Confirm Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>

    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>
    <string name="firebase_status_fmt">Firebase UID: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>

    <string name="emailpassword_title_text">Email and Password</string>
    <string name="passwordless_status_fmt">Email User: %1$s (verified: %2$b)</string>

    <string name="passwordless_title_text">Passwordless Sign In</string>
    <string name="status_email_not_sent">Send link to your email to get started.</string>

    <string name="status_email_sent">Link sent, check your email to continue.</string>
    <string name="status_link_found">Link received, enter email to sign in.</string>

    <string name="phone_title_text">Phone Number</string>
    <string name="firebaseui_status_fmt">Firebase User: %s</string>
    <string name="firebaseui_title_text">FirebaseUI Auth</string>
    <string name="generic_title_text">OAuth Sign In</string>
    <string name="generic_signin_fmt">Sign In with %s</string>

    <string name="generic_status_fmt">User: %s (%s)</string>

    <string name="generic_label_provider">Provider:</string>
    <string name="id_fmt">User ID: %s</string>

    <string name="email_fmt">Email: %s</string>
    <string name="enroll_mfa">Enroll MFA</string>
    <string name="unenroll_mfa">Unenroll MFA</string>
    <string name="reload">Reload</string>

    <string name="error_sign_in_failed">Sign in failed, see logs for details.</string>
    <string name="multi_factor_signed_out">You are not signed in. To use this sample, first navigate to the Email/Password example to sign in and then return here to enroll in multi-factor auth.</string>
    <string name="choose_the_text_size">Which Text Size do you prefer</string>
    <string name="which_color_do_you_prefer">Which Color do you prefer</string>
    <string name="about_app_screen">
        Disaster Reporter Application helps you to report about the Disasters that have happened in the past and warn about the disasters which are likely to occur in future. Users can also View the Reported Disasters.

        <br></br>
        <br></br>
        <br></br>
        Made By
        I3D Labs
    </string>
    <string name="view_reported_disasters_a2">View Reported Disasters</string>
    <string name="report_a_disaster_a2">Report a Disaster</string>

    <string-array name="spinner_items_prev_inc_type">
        <item>Previous Disaster</item>
        <item>Incoming Disaster</item>
    </string-array>
    <string-array name="spinner_items_disaster_type">
        <item>Earthquake</item>
        <item>Landslide</item>
        <item>Flood</item>
        <item>Terrorist Attack</item>
    </string-array>
    <string-array name="spinner_items_severity_type">
        <item>Low</item>
        <item>Medium</item>
        <item>High</item>
    </string-array>

    <string-array name="spinner_items_l_time_type">
        <item>Last Week</item>
        <item>Last Month</item>
        <item>Last Year</item>
    </string-array>
    <string-array name="spinner_items_n_time_type">
        <item>Next Week</item>
        <item>Next Month</item>
        <item>Next Year</item>
    </string-array>
    <string-array name="spinner_choose_text_size">
        <item>Small Text</item>
        <item>Medium Text</item>
        <item>Large Text</item>
        <item>Extra Large Text</item>
    </string-array>

    <string-array name="spinner_choose_color">
        <item> White </item>
        <item> Blue </item>
        <item> Yellow </item>
        <item> Silver </item>
        <item> Purple </item>
        <item> Green </item>
        <item> Black(Night Mode) </item>
        <item> Black(Dark Mode) </item>
    </string-array>

</resources>