<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey_100"
        android:gravity="center">


        <EditText
            android:id="@+id/fieldEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:hint="@string/hint_email"
            android:ems="10"

            android:layout_centerHorizontal="true"
            android:inputType="textEmailAddress"
            />

        <EditText
            android:id="@+id/fieldPassword1"
            android:layout_width="wrap_content"
            android:ems="10"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/hint_password"
            android:layout_below="@id/fieldEmail"
            android:layout_centerHorizontal="true"
            android:inputType="textPassword"
            />
        <EditText
            android:id="@+id/fieldPassword2"
            android:layout_width="wrap_content"
            android:ems="10"
            android:layout_below="@id/fieldPassword1"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/hint_password2"
            android:inputType="textPassword"
            android:layout_centerHorizontal="true"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ll_spinner_text_size"
            android:layout_below="@id/fieldPassword2"
            android:orientation="horizontal"
            android:weightSum="2"
            android:padding="10dp"
            >
            <TextView
                android:layout_height="wrap_content"
                android:id="@+id/label_for_textSize_spinner"
                android:text="@string/choose_the_text_size"
                android:layout_width="0dp"
                android:layout_weight="1"
                />
            <Spinner

                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/spinner_textSizeSelectApp"
                android:entries="@array/spinner_choose_text_size"
                android:layout_weight="1"
                android:textAlignment="center"
                android:gravity="center_horizontal" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ll_spinner_color"
            android:layout_below="@id/ll_spinner_text_size"
            android:orientation="horizontal"
            android:weightSum="2"
            android:padding="10dp"
            >
            <TextView
                android:layout_height="wrap_content"
                android:id="@+id/label_for_color_spinner"
                android:text="@string/which_color_do_you_prefer"
                android:layout_width="0dp"
                android:layout_weight="1"
                />
            <Spinner

                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/spinner_color_map"
                android:entries="@array/spinner_choose_color"
                android:layout_weight="1"
                android:textAlignment="center"
                android:gravity="center_horizontal" />


        </LinearLayout>



        <Button
            android:id="@+id/emailCreateAccountButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/button_horizontal_margin"
            android:layout_marginLeft="@dimen/button_horizontal_margin"
            android:layout_marginEnd="16dp"
            android:layout_below="@id/ll_spinner_color"
            android:layout_marginTop="15dp"
            android:layout_marginRight="16dp"
            android:text="@string/create_account"
            android:layout_centerHorizontal="true"
            android:theme="@style/ThemeOverlay.MyDarkButton"
            />


    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>