<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_100"
    android:gravity="center"
    >


        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/i1add"
            android:src="@drawable/login"
            android:layout_centerHorizontal="true"
            />
        <EditText
            android:id="@+id/fieldEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="10dp"
            android:layout_below="@id/i1add"
            android:hint="@string/hint_email"
            android:ems="10"
            android:layout_centerHorizontal="true"
            android:inputType="textEmailAddress"
             />

        <EditText
            android:id="@+id/fieldPassword"
            android:layout_width="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/hint_password"
            android:ems="10"
            android:layout_below="@id/fieldEmail"
            android:inputType="textPassword"
             />


        <Button
            android:id="@+id/emailSignInButton"
            android:layout_width="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="@dimen/button_horizontal_margin"
            android:layout_marginRight="@dimen/button_horizontal_margin"
            android:text="@string/sign_in"
            android:layout_below="@id/fieldPassword"
            android:theme="@style/ThemeOverlay.MyDarkButton"
             />


</RelativeLayout>