<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:id="@+id/user_landing_page_a2"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:id="@+id/ll1"
            android:gravity="center"
            >
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/report_disaster2"
                android:id="@+id/i1si"
                />
            <Button
                android:id="@+id/reportDisasterButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginEnd="@dimen/button_horizontal_margin"
                android:layout_marginRight="@dimen/button_horizontal_margin"
                android:text="@string/report_a_disaster_a2"
                android:theme="@style/ThemeOverlay.MyDarkButton"
                />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:id="@+id/ll2"
            >

            <ImageView
                android:id="@+id/i2ca"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/view_reported_disaster"

                />

            <Button
                android:id="@+id/viewReportedDisasterButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/button_horizontal_margin"
                android:layout_marginLeft="@dimen/button_horizontal_margin"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/view_reported_disasters_a2"
                android:theme="@style/ThemeOverlay.MyDarkButton" />


        </LinearLayout>

        <TextView android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/textView6"
            android:textStyle="bold"
            android:textSize="15sp"
            android:paddingTop="10sp"
            android:paddingBottom="10sp"
            android:text="@string/copyright_string"
            />
    </LinearLayout>
</RelativeLayout>